Archive2/6a/af79388846b192/output
main.cpp: In function 'void foo()':
main.cpp:12:55: error: iteration 461168601842738791ul invokes undefined behavior [-Werror=aggressive-loop-optimizations]
     while(num_objects) objects[--num_objects].~Object();
                                                       ^
main.cpp:12:5: note: containing loop
     while(num_objects) objects[--num_objects].~Object();
     ^
cc1plus: all warnings being treated as errors
